social-network fix

--- a/index.html
+++ b/index.html
@@ -46,65 +46,65 @@
                     <div class="banner">
                         <img class="banner__img" src="img2/Photoair.png" alt="">
                     </div>
-                    <section class="price__contents">
+                    <section class="price-contents">
                         <h2 class="title">Тарифы</h2>
-                        <div class="price__contents-features">
-                            <div class="features__item">
-                                <div class="features__item__icon">
-                                    <img src="./img2/flower.png" class="features__item__icon-jpg" alt="icon tarif">
+                        <div class="price-contents-features">
+                            <div class="features-item">
+                                <div class="features-item__icon">
+                                    <img src="./img2/flower.png" class="features-item__icon-jpg" alt="icon tarif">
                                 </div>
-                                <div class="features__item__content">
-                                    <h3 class="features__item__content-title">стандарт</h3>
-                                    <div class="features__item__content-desc">
-                                        <div class="features__item__content-text">Создан для вашего комфортного отдыха
+                                <div class="features-item__content">
+                                    <h3 class="features-item__content-title">стандарт</h3>
+                                    <div class="features-item__content-desc">
+                                        <div class="features-item__content-text">Создан для вашего комфортного отдыха
                                         </div>
                                     </div>
-                                    <div class="features__item__content-details">
-                                        <ul class="features__item__content-details-item">
-                                            <li class="features__item__content-details-item-list">Питание включено</li>
-                                            <li class="features__item__content-details-item-list">Багаж (5 кг)</li>
-                                            <li class="features__item__content-details-item-list">Детское кресло</li>
+                                    <div class="features-item__content-details">
+                                        <ul class="features-item__content-details-item">
+                                            <li class="features-item__content-details-item-list">Питание включено</li>
+                                            <li class="features-item__content-details-item-list">Багаж (5 кг)</li>
+                                            <li class="features-item__content-details-item-list">Детское кресло</li>
                                         </ul>
                                     </div>
-                                    <div class="features__item__content-price"><sub class="sub">$</sub>19</div>
+                                    <div class="features-item__content-price"><sub class="sub">$</sub>19</div>
                                 </div>
                             </div>
-                            <div class="features__item_active">
-                                <div class="features__item__icon">
-                                    <img src="./img2/mark-as-favorite-star.png" class="features__item__icon-jpg" alt="icon tarif">
+                            <div class="features-item_active">
+                                <div class="features-item__icon">
+                                    <img src="./img2/mark-as-favorite-star.png" class="features-item__icon-jpg" alt="icon tarif">
                                 </div>
-                                <div class="features__item__content">
-                                    <h3 class="features__item__content-title">премиум</h3>
-                                    <div class="features__item__content-desc">
-                                        <div class="features__item__content-text">Для любителей хороших впечатлений</div>
+                                <div class="features-item__content">
+                                    <h3 class="features-item__content-title">премиум</h3>
+                                    <div class="features-item__content-desc">
+                                        <div class="features-item__content-text">Для любителей хороших впечатлений</div>
                                     </div>
-                                    <div class="features__item__content-details">
-                                        <ul class="features__item__content-details-item">
-                                            <li class="features__item__content-details-item-list">Питание включено</li>
-                                            <li class="features__item__content-details-item-list">Багаж (5 кг)</li>
-                                            <li class="features__item__content-details-item-list">Детское кресло</li>
+                                    <div class="features-item__content-details">
+                                        <ul class="features-item__content-details-item">
+                                            <li class="features-item__content-details-item-list">Питание включено</li>
+                                            <li class="features-item__content-details-item-list">Багаж (5 кг)</li>
+                                            <li class="features-item__content-details-item-list">Детское кресло</li>
                                         </ul>
                                     </div>
-                                    <div class="features__item__content-price"><sub class="sub">$</sub>39</div>
+                                    <div class="features-item__content-price"><sub class="sub">$</sub>39</div>
                                 </div>
                             </div>
-                            <div class="features__item">
-                                <div class="features__item__icon">
-                                    <img src="./img2/painter-palette.png" class="features__item__icon-jpg" alt="icon tarif">
+                            <div class="features-item">
+                                <div class="features-item__icon">
+                                    <img src="./img2/painter-palette.png" class="features-item__icon-jpg" alt="icon tarif">
                                 </div>
-                                <div class="features__item__content">
-                                    <h3 class="features__item__content-title">лакшери</h3>
-                                    <div class="features__item__content-desc">
-                                        <div class="features__item__content-text">Всё самое лучшее и незабываемое</div>
+                                <div class="features-item__content">
+                                    <h3 class="features-item__content-title">лакшери</h3>
+                                    <div class="features-item__content-desc">
+                                        <div class="features-item__content-text">Всё самое лучшее и незабываемое</div>
                                     </div>
-                                    <div class="features__item__content-details">
-                                        <ul class="features__item__content-details-item">
-                                            <li class="features__item__content-details-item-list">Питание включено</li>
-                                            <li class="features__item__content-details-item-list">Багаж (5 кг)</li>
-                                            <li class="features__item__content-details-item-list">Детское кресло</li>
+                                    <div class="features-item__content-details">
+                                        <ul class="features-item__content-details-item">
+                                            <li class="features-item__content-details-item-list">Питание включено</li>
+                                            <li class="features-item__content-details-item-list">Багаж (5 кг)</li>
+                                            <li class="features-item__content-details-item-list">Детское кресло</li>
                                         </ul>
                                     </div>
-                                    <div class="features__item__content-price">
+                                    <div class="features-item__content-price">
                                         <sub class="sub">$</sub>99
                                     </div>
                                 </div>
