reviews and crew

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a href="#" class="menu__link menu__link--main menu__link_active">Главная</a>
+                                <a href="./index.html" class="menu__link menu__link--main menu__link_active">Главная</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link menu__link--reviews">Отзывы</a>
+                                <a href="./reviews.html" class="menu__link menu__link--iews">Отзывы</a>
                             </li>
                             <li class="menu__item">
-                                <a href="#" class="menu__link menu__link--crew">Экипаж</a>
+                                <a href="./crew.html" class="menu__link menu__link--crew">Экипаж</a>
                             </li>
                         </ul>
                     </nav>
@@ -113,8 +113,8 @@
                     <section class="news">
                         <h2 class="title"> Последние новости </h2>
                         <div class="news-items">
-                            <ul class="news__list">
-                                <li class="news__item">
+                            <ul class="news-list">
+                                <li class="news-item">
                                     <div class="avatar">
                                         <img src="img2/planeflying.png" alt=""></div>
                                     <div class="desc">
@@ -130,7 +130,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="news__item">
+                                <li class="news-item">
                                     <div class="avatar">
                                         <img src="img2/Photo.png" alt=""></div>
                                     <div class="desc">
@@ -144,7 +144,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="news__item">
+                                <li class="news-item">
                                     <div class="avatar">
                                         <img src="img2/Layer_5.png" alt=""></div>
                                     <div class="desc">
