--- a/crew.html
+++ b/crew.html
@@ -53,26 +53,140 @@
                             </li>
                         </ul>
                     </nav>
-
-                    <section class="crew">
+                    <div class="crew">
                         <h2 class="title">Экипаж</h2>
                         <div class="crew-contents">
-                                <div class="avatar-employees">
-                                <div class="employee-name">Алексей</div>
-                                </div>
-                                <div class="crew-item__content">
-                                    <h3 class="crew-employee-name">Белов Алексей Вадимович</h3>
-                                    <h3 class="crew-item__content-title">Главный специалист</h3>
+                            <ul class="crew__list">
+                                <li class="c-team__item">
+                                    <div class="team__img-wrap">
+                                        <img class="c-team__img" src="./img2/AviationCV.com_Pilot_Life.png" alt="employees">
+                                        <span class="c-team__img-title">Алексей</span>
+                                    </div>
+                                    <div class="item-desc">
+                                        <h3 class="crew-employee-name">Белов Алексей Вадимович</h3>
+                                        <h3 class="crew-item__content-title">Главный специалист</h3>
                                         <div class="features-item__content-text">Высокий профессионализм, честь и
                                             отвага – все это характеристики главного пилота Белова А.В. На его счету
                                             более 700 полетов. Награжден за мужество и отвагу указом президента.
                                         </div>
-                                </div>
-
-                         
+                                    </div>
+                                </li>
+                                <li class="c-team__item">
+                                    <div class="team__img-wrap">
+                                        <img class="c-team__img" src="./img2/Aviation2.png " alt="employees">
+                                        <span class="c-team__img-title">Инна</span>
+                                    </div>
+                                    <div class="item-desc">
+                                        <h3 class="crew-employee-name">Сухарина Инна Николаевна</h3>
+                                        <h3 class="crew-item__content-title">Бортпроводник</h3>
+                                        <div class="features-item__content-text">Благодаря деятельности этого человека,
+                                            на борту самолета клиенты чувствуют себя, как дома. Инна Николаевна чутко
+                                            относится ко всем требованиям клиентов, очень любит детей и всячески
+                                            помогает сделать полет комфортным и приятным.
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="c-team__item">
+                                    <div class="team__img-wrap">
+                                        <img class="c-team__img" src="./img2/Aviation3.png " alt="employees">
+                                        <span class="c-team__img-title">Борис</span>
+                                    </div>
+                                    <div class="item-desc">
+                                        <h3 class="crew-employee-name">Лещ Борис Анатольевич</h3>
+                                        <h3 class="crew-item__content-title">Авиатехник</h3>
+                                        <div class="features-item__content-text">
+                                            Человек с золотыми руками, инженер
+                                            и конструктор от Бога! Борис Анатольевич работает уже более 50 лет и на
+                                            своем веку видел, как из старых моделей самолетов появлялись настоящие авиа
+                                            шедевры.
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="c-team__item">
+                                    <div class="team__img-wrap">
+                                        <img class="c-team__img" src="./img2/Aviation4.png " alt="employees">
+                                        <span class="c-team__img-title">Элина</span>
+                                    </div>
+                                    <div class="item-desc">
+                                        <h3 class="crew-employee-name">Дигангидзе Элина Даниловна</h3>
+                                        <h3 class="crew-item__content-title">Диспетчер</h3>
+                                        <div class="features-item__content-text">
+                                            Ей присущ внимательный подход к расчетам, а отменная память удивляет даже
+                                            самых опытных членов экипажа. За 22 года работы она стажировала более 100
+                                            диспетчеров для работы в крупнейших аэропортах страны. Знает в совершенстве
+                                            5 иностранных языков.
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="c-team__item">
+                                    <div class="team__img-wrap">
+                                        <img class="c-team__img" src="./img2/Aviation5.png " alt="employees">
+                                        <span class="c-team__img-title">Елена</span>
+                                    </div>
+                                    <div class="item-desc">
+                                        <h3 class="crew-employee-name">Следь Елена Николаевна</h3>
+                                        <h3 class="crew-item__content-title">Старший бортпроводник </h3>
+                                        <div class="features-item__content-text">
+                                            Вежливая улыбка, внимательность к деталям и большой опыт работы – это лишь
+                                            малая часть достоинств Елены Николаевны. Старший бортпроводник задает тон
+                                            всей поездке, поэтому клиенты, которые летят с ней, заряжаются отличным
+                                            настроением и гармонией.
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="c-team__item">
+                                    <div class="team__img-wrap">
+                                        <img class="c-team__img" src="./img2/Aviation6.png " alt="employees">
+                                        <span class="c-team__img-title">Юрий</span>
+                                    </div>
+                                    <div class="item-desc">
+                                        <h3 class="crew-employee-name">Нестеренко Юрий Афанасьевич </h3>
+                                        <h3 class="crew-item__content-title">Второй пилот </h3>
+                                        <div class="crew-item__content-text">
+                                            Правая рука главного пилота, опытный и отважный помощник. О своей работе в
+                                            шутку говорит так «Наше дело правое, не мешать левому». Опыт работы
+                                            составляет 18 лет, внимательно относится ко всем деталям и считает свою
+                                            работу – делом жизни.
+                                        </div>
+                                    </div>
+                                </li>
                         </div>
-
-                    </section>
+                    </div>
+                    <div class="content-partner">
+                        <h2 class="title">Партнёры</h2>
+                        <ul class="content-partner__list">
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo-1.png" alt="Партнёры">
+                                </a>
+                            </li>
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo-2.png" alt="Партнёры">
+                                </a>
+                            </li>
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo3.png" alt="Партнёры">
+                                </a>
+                            </li>
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo4.png" alt="Партнёры">
+                                </a>
+                            </li>
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo5.png" alt="Партнёры">
+                                </a>
+                            </li>
+                            <li class="content-partner__item">
+                                <a class="content-partner__item-link" href="#">
+                                    <img src="./img2/logo6.png" alt="Партнёры">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                     <div class="pagination">
                         <div class="pagination__display">Страница 1 из 7</div>
                         <div class="pagination__list">
@@ -110,10 +224,6 @@
                 </main>
             </div>
         </div>
-
-
-
-
         <footer class="footer">
             <div class="container">
                 <div class="footer-text">
@@ -162,8 +272,6 @@
                             </div>
                         </ul>
                     </div>
-
-
                 </div>
         </footer>
 </body>
