--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                                 <a href="./index.html" class="menu__link menu__link--main menu__link_active">Главная</a>
                             </li>
                             <li class="menu__item">
-                                <a href="./reviews.html" class="menu__link menu__link--iews">Отзывы</a>
+                                <a href="./reviews.html" class="menu__link menu__link--reviews">Отзывы</a>
                             </li>
                             <li class="menu__item">
                                 <a href="./crew.html" class="menu__link menu__link--crew">Экипаж</a>
@@ -110,11 +110,11 @@
                                 </div>
                             </div>
                     </section>
-                    <section class="news">
+                    <section class="other">
                         <h2 class="title"> Последние новости </h2>
-                        <div class="news-items">
-                            <ul class="news-list">
-                                <li class="news-item">
+                        <div class="other-items">
+                            <ul class="other-list">
+                                <li class="other-item">
                                     <div class="avatar">
                                         <img src="img2/planeflying.png" alt=""></div>
                                     <div class="desc">
@@ -130,7 +130,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="news-item">
+                                <li class="other-item">
                                     <div class="avatar">
                                         <img src="img2/Photo.png" alt=""></div>
                                     <div class="desc">
@@ -144,7 +144,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="news-item">
+                                <li class="other-item">
                                     <div class="avatar">
                                         <img src="img2/Layer_5.png" alt=""></div>
                                     <div class="desc">
@@ -212,43 +212,41 @@
                 </div>
                 <div class="footer-contacts">
                     <div class="social-networks"> Наши социальные сети</div>
-                     <div class="social-networks-block">
+                    <div class="social-networks-block">
                         <ul class="social-networks-list">
-                                <div class="social-networks-icon">
-                             <li class="social-networks-item">
-                                 <a href="#"></a>
-                                 <img src="./img2/vk.png" class="social-networks-icon-img" alt="" >
-                             </li>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#"></a>
+                                    <img src="./img2/vk.png" class="social-networks-icon-img" alt="">
+                                </li>
                             </div>
-                             <div class="social-networks-icon">
-                             <li class="social-networks-item">
-                                <a href="#"></a>
-                                <img src="./img2/fb.png" class="social-networks-icon-img" alt="">
-                            </li>
-                        </div>
                             <div class="social-networks-icon">
-                            <li class="social-networks-item">
-                                <a href="#"></a>
-                                <img src="./img2/google.png" class="social-networks-icon-img" alt="">
-                            </li>
-                        </div>
+                                <li class="social-networks-item">
+                                    <a href="#"></a>
+                                    <img src="./img2/fb.png" class="social-networks-icon-img" alt="">
+                                </li>
+                            </div>
                             <div class="social-networks-icon">
-                            <li class="social-networks-item">
-                                <a href="#"></a>
-                                <img src="./img2/twitter.png" class="social-networks-icon-img" alt="">
-                            </li>
-                        </div>
+                                <li class="social-networks-item">
+                                    <a href="#"></a>
+                                    <img src="./img2/google.png" class="social-networks-icon-img" alt="">
+                                </li>
+                            </div>
                             <div class="social-networks-icon">
-                            <li class="social-networks-item">
-                                <a href="#"></a>
-                                <img src="./img2/mail.png" class="social-networks-icon-img" alt="">
-                            </li>
-                        </div>
-                         </ul>
-                     </div>
-                     
-
-            </div>
+                                <li class="social-networks-item">
+                                    <a href="#"></a>
+                                    <img src="./img2/twitter.png" class="social-networks-icon-img" alt="">
+                                </li>
+                            </div>
+                            <div class="social-networks-icon">
+                                <li class="social-networks-item">
+                                    <a href="#"></a>
+                                    <img src="./img2/mail.png" class="social-networks-icon-img" alt="">
+                                </li>
+                            </div>
+                        </ul>
+                    </div>
+                </div>
         </footer>
 </body>
 
