--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <header class="header">
             <div class="container">
                 <div class="logo">
-                    <img src="img2/logo_header.png" alt="logo-pic">
+                    <a href="./index.html">
+                        <img src="img2/logo_header.png" alt="logo-pic"></a>
                 </div>
                 <div class="contacts">
                     <a href="tel:88000039210" class="contacts__phone">8 (800) 00-392-10</a>
@@ -208,7 +209,8 @@
                     </p>
                 </div>
                 <div class="footer-logo">
-                    <img src="./img2/Vector_Smart_Object.png" alt="logo-pic">
+                    <a href="./index.html">
+                        <img src="./img2/Vector_Smart_Object.png" alt="logo-pic"></a>
                 </div>
                 <div class="footer-contacts">
                     <div class="social-networks"> Наши социальные сети</div>
