--- a/reviews.html
+++ b/reviews.html
@@ -185,18 +185,29 @@
                         </label>
                     </div>
                 </div>
-                <div class="rewiews__label">
-                    <div class="rewiews__content-title">Отображать фото в отзыве?</div>
-                    <div class="rewiews__radio">
-                        <input type="radio" name="choice"> Да
-                        <input type="radio" name="choice"> Нет
+                <div class="rewiews__content">
+                    <div class="rewiews__label">
+                        <label class="rewiews__input">
+                            <div class="rewiews__content-title">Отображать фото в отзыве?</div>
+                            <div class="rewiews__radio">
+                                <label class="rewiews__radio">
+                                    <input class="rewiews__radio-input" type="radio" name="choice">
+                                    <div class="rewiews__radio-fake"></div>
+                                    <div class="rewiews__radio-title" checked>Да</div>
+                                </label>
+                                <label class="rewiews__radio">
+                                    <input class="rewiews__radio-input" type="radio" name="choice">
+                                    <div class="rewiews__radio-fake"></div>
+                                    <div class="rewiews__radio-title" checked>Нет</div>
+                                </label>
+                            </div>
+                        </label>
                     </div>
                     <div class="button">
                         <button class="button-sent">Отправить
                             <img class="button-sent__img" src="./img2/iconsent.png" alt="">
                         </button>
                     </div>
-
                 </div>
     </div>
     <div>
