--- a/crew.html
+++ b/crew.html
@@ -47,7 +47,7 @@
                     <nav class="nav-menu">
                         <ul class="nav-menu__list">
                             <li class="nav-menu__item">
-                                <a href="./reviews.html" class="nav-menu__link">Отзывы</a>
+                                <a href="./index.html" class="nav-menu__link">Главная</a>
                             </li>
                             <li class="nav-menu__item">
                                 <a href="./crew.html" class="nav-menu__link">Экипаж</a>
