--- a/reviews.html
+++ b/reviews.html
@@ -47,10 +47,10 @@
                     <nav class="nav-menu">
                         <ul class="nav-menu__list">
                             <li class="nav-menu__item">
-                                <a href="./reviews.html" class="nav-menu__link">Отзывы</a>
+                                <a href="./index.html" class="nav-menu__link">Главная</a>
                             </li>
                             <li class="nav-menu__item">
-                                <a href="./crew.html" class="nav-menu__link">Экипаж</a>
+                                <a href="./reviews.html" class="nav-menu__link">Отзывы</a>
                             </li>
                         </ul>
                     </nav>
@@ -181,7 +181,7 @@
                     <div class="rewiews__label">
                         <label class="rewiews__textarea-label">
                             <div class="rewiews__content-title">Текст отзыва</div>
-                            <textarea class="rewiews__input-text rewiews__textarea" placeholder="Мне понравилось"></textarea>
+                            <textarea class="rewiews__input-text rewiews__textarea" placeholder="Мне понравилось" autofocus></textarea>
                         </label>
                     </div>
                 </div>
@@ -191,7 +191,7 @@
                             <div class="rewiews__content-title">Отображать фото в отзыве?</div>
                             <div class="rewiews__radio">
                                 <label class="rewiews__radio">
-                                    <input class="rewiews__radio-input" type="radio" name="choice">
+                                    <input class="rewiews__radio-input" type="radio" name="choice" checked>
                                     <div class="rewiews__radio-fake"></div>
                                     <div class="rewiews__radio-title" checked>Да</div>
                                 </label>
