--- a/crew.html
+++ b/crew.html
@@ -47,10 +47,10 @@
                     <nav class="nav-menu">
                         <ul class="nav-menu__list">
                             <li class="nav-menu__item">
-                                <a href="./index.html" class="nav-menu__link">Главная</a>
+                                <a href="./index.html" class="nav-menu__link"><em>Главная</em></a>
                             </li>
                             <li class="nav-menu__item">
-                                <a href="./crew.html" class="nav-menu__link">Экипаж</a>
+                                <a href="./crew.html" class="nav-menu__link"><em>Экипаж</em></a>
                             </li>
                         </ul>
                     </nav>
