--- a/reviews.html
+++ b/reviews.html
@@ -47,10 +47,10 @@
                     <nav class="nav-menu">
                         <ul class="nav-menu__list">
                             <li class="nav-menu__item">
-                                <a href="./index.html" class="nav-menu__link">Главная</a>
+                                <a href="./index.html" class="nav-menu__link"><em>Главная</em></a>
                             </li>
                             <li class="nav-menu__item">
-                                <a href="./reviews.html" class="nav-menu__link">Отзывы</a>
+                                <a href="./reviews.html" class="nav-menu__link"><em>Отзывы</em></a>
                             </li>
                         </ul>
                     </nav>
@@ -181,7 +181,7 @@
                     <div class="rewiews__label">
                         <label class="rewiews__textarea-label">
                             <div class="rewiews__content-title">Текст отзыва</div>
-                            <textarea class="rewiews__input-text rewiews__textarea" placeholder="Мне понравилось" autofocus></textarea>
+                            <textarea class="rewiews__input-text rewiews__textarea" placeholder="Мне понравилось"></textarea>
                         </label>
                     </div>
                 </div>
