--- a/reviews.html
+++ b/reviews.html
@@ -50,7 +50,7 @@
                                 <a href="./index.html" class="nav-menu__link"><em>Главная</em></a>
                             </li>
                             <li class="nav-menu__item">
-                                <a href="./reviews.html" class="nav-menu__link"><em>Отзывы</em></a>
+                                <a href="./reviews.html" class="nav-menu__link-second"><em>Отзывы</em></a>
                             </li>
                         </ul>
                     </nav>
