--- a/crew.html
+++ b/crew.html
@@ -50,7 +50,7 @@
                                 <a href="./index.html" class="nav-menu__link"><em>Главная</em></a>
                             </li>
                             <li class="nav-menu__item">
-                                <a href="./crew.html" class="nav-menu__link"><em>Экипаж</em></a>
+                                <a href="./crew.html" class="nav-menu__link-second"><em>Экипаж</em></a>
                             </li>
                         </ul>
                     </nav>
