--- a/crew.html
+++ b/crew.html
@@ -32,13 +32,13 @@
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a href="./index.html" class="menu__link menu__link--main menu__link_active">Главная</a>
+                                <a href="./index.html" class="menu__link menu__link--main menu__link">Главная</a>
                             </li>
                             <li class="menu__item">
                                 <a href="./reviews.html" class="menu__link menu__link--reviews">Отзывы</a>
                             </li>
                             <li class="menu__item">
-                                <a href="./crew.html" class="menu__link menu__link--crew">Экипаж</a>
+                                <a href="./crew.html" class="menu__link menu__link--crew menu__link_active">Экипаж</a>
                             </li>
                         </ul>
                     </nav>
