--- a/reviews.html
+++ b/reviews.html
@@ -32,10 +32,10 @@
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a href="./index.html" class="menu__link menu__link--main menu__link_active">Главная</a>
+                                <a href="./index.html" class="menu__link menu__link--main menu__link">Главная</a>
                             </li>
                             <li class="menu__item">
-                                <a href="./reviews.html" class="menu__link menu__link--reviews">Отзывы</a>
+                                <a href="./reviews.html" class="menu__link menu__link--reviews menu__link_active">Отзывы</a>
                             </li>
                             <li class="menu__item">
                                 <a href="./crew.html" class="menu__link menu__link--crew">Экипаж</a>
