--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 </div>
                 <div class="contacts">
                     <a href="tel:88000039210" class="contacts__phone">8 (800) 00-392-10</a>
-                    <div class="contacts__desk">График работы</div>
+                    <div class="contacts__desk" title="пн-вс: 09:00-20:00
+обед: 14:00-14:30">График работы</div>
                 </div>
             </div>
         </header>
