--- a/reviews.html
+++ b/reviews.html
@@ -28,7 +28,7 @@
         </header>
         <div class="maincontent">
             <div class="container">
-                <aside class="maincontent__sidebar">
+                <aside class="sidebar">
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
@@ -54,11 +54,11 @@
                             </li>
                         </ul>
                     </nav>
-                    <section class="other">
+                    <section class="content-list">
                         <h2 class="title"> Отзывы </h2>
-                        <div class="other-items">
-                            <ul class="other-list">
-                                <li class="other-item">
+                        <div class="content-list-items">
+                            <ul class="content-list-list">
+                                <li class="content-list-item">
                                     <div class="avatar">
                                         <img src="img2/девушка.png" alt=""></div>
                                     <div class="desc">
@@ -72,7 +72,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="other-item">
+                                <li class="content-list-item">
                                     <div class="avatar">
                                         <img src="img2/мужик.png" alt=""></div>
                                     <div class="desc">
@@ -85,7 +85,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="other-item">
+                                <li class="content-list-item">
                                     <div class="avatar">
                                         <img src="img2/синий лого.png" alt=""></div>
                                     <div class="desc">
@@ -99,7 +99,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="other-item">
+                                <li class="content-list-item">
                                     <div class="avatar">
                                         <img src="img2/бабушка.png" alt=""></div>
                                     <div class="desc">
@@ -152,6 +152,7 @@
                 </main>
             </div>
         </div>
+        <div class="container">
         <div class="booking-questions">
             <div class="booking-questions-block">
                 <p class="booking-questions-block-text">Вопросы по бронированию билетов в нашей авиакомпании
@@ -160,6 +161,7 @@
                         (800) 00-392-10</a>.</p>
             </div>
         </div>
+    </div>
         <section class="rewiews">
             <form class="rewiews__block">
                 <div class="rewiews__contents">
