--- a/crew.html
+++ b/crew.html
@@ -28,7 +28,7 @@
         </header>
         <div class="maincontent">
             <div class="container">
-                <aside class="maincontent__sidebar">
+                <aside class="sidebar">
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
@@ -66,7 +66,7 @@
                                     <div class="item-desc">
                                         <h3 class="crew-employee-name">Белов Алексей Вадимович</h3>
                                         <h3 class="crew-item__content-title">Главный специалист</h3>
-                                        <div class="features-item__content-text">Высокий профессионализм, честь и
+                                        <div class="price-contents__content-text">Высокий профессионализм, честь и
                                             отвага – все это характеристики главного пилота Белова А.В. На его счету
                                             более 700 полетов. Награжден за мужество и отвагу указом президента.
                                         </div>
@@ -80,7 +80,7 @@
                                     <div class="item-desc">
                                         <h3 class="crew-employee-name">Сухарина Инна Николаевна</h3>
                                         <h3 class="crew-item__content-title">Бортпроводник</h3>
-                                        <div class="features-item__content-text">Благодаря деятельности этого человека,
+                                        <div class="price-contents__content-text">Благодаря деятельности этого человека,
                                             на борту самолета клиенты чувствуют себя, как дома. Инна Николаевна чутко
                                             относится ко всем требованиям клиентов, очень любит детей и всячески
                                             помогает сделать полет комфортным и приятным.
@@ -95,7 +95,7 @@
                                     <div class="item-desc">
                                         <h3 class="crew-employee-name">Лещ Борис Анатольевич</h3>
                                         <h3 class="crew-item__content-title">Авиатехник</h3>
-                                        <div class="features-item__content-text">
+                                        <div class="price-contents__content-text">
                                             Человек с золотыми руками, инженер
                                             и конструктор от Бога! Борис Анатольевич работает уже более 50 лет и на
                                             своем веку видел, как из старых моделей самолетов появлялись настоящие авиа
@@ -111,7 +111,7 @@
                                     <div class="item-desc">
                                         <h3 class="crew-employee-name">Дигангидзе Элина Даниловна</h3>
                                         <h3 class="crew-item__content-title">Диспетчер</h3>
-                                        <div class="features-item__content-text">
+                                        <div class="price-contents__content-text">
                                             Ей присущ внимательный подход к расчетам, а отменная память удивляет даже
                                             самых опытных членов экипажа. За 22 года работы она стажировала более 100
                                             диспетчеров для работы в крупнейших аэропортах страны. Знает в совершенстве
@@ -127,7 +127,7 @@
                                     <div class="item-desc">
                                         <h3 class="crew-employee-name">Следь Елена Николаевна</h3>
                                         <h3 class="crew-item__content-title">Старший бортпроводник </h3>
-                                        <div class="features-item__content-text">
+                                        <div class="price-contents__content-text">
                                             Вежливая улыбка, внимательность к деталям и большой опыт работы – это лишь
                                             малая часть достоинств Елены Николаевны. Старший бортпроводник задает тон
                                             всей поездке, поэтому клиенты, которые летят с ней, заряжаются отличным
