--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         </header>
         <div class="maincontent">
             <div class="container">
-                <aside class="maincontent__sidebar">
+                <aside class="sidebar">
                     <nav class="menu">
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a href="./index.html" class="menu__link menu__link--main menu__link_active">Главная</a>
+                                <a href="./index.html" class="menu__link menu__link--main menu__link--active">Главная</a>
                             </li>
                             <li class="menu__item">
                                 <a href="./reviews.html" class="menu__link menu__link--reviews">Отзывы</a>
@@ -50,7 +50,8 @@
                     </div>
                     <section class="price-contents">
                         <h2 class="title">Тарифы</h2>
-                        <div class="price-contents-features">
+                        <div class="price-contents__features">
+                            <div class="price-contents__item"> 
                             <div class="features-item">
                                 <div class="features-item__icon">
                                     <img src="./img2/flower.png" class="features-item__icon-jpg" alt="icon tarif">
@@ -68,7 +69,9 @@
                                             <li class="features-item__content-details-item-list">Детское кресло</li>
                                         </ul>
                                     </div>
-                                    <div class="features-item__content-price"><sub class="sub">$</sub>19</div>
+                                    <div class="features-item__content-price">
+                                        <sub class="sub">$</sub>19
+                                    </div>
                                 </div>
                             </div>
                             <div class="features-item_active">
@@ -87,7 +90,9 @@
                                             <li class="features-item__content-details-item-list">Детское кресло</li>
                                         </ul>
                                     </div>
-                                    <div class="features-item__content-price"><sub class="sub">$</sub>39</div>
+                                    <div class="features-item__content-price">
+                                        <sub class="sub">$</sub>39
+                                    </div>
                                 </div>
                             </div>
                             <div class="features-item">
@@ -111,12 +116,13 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                     </section>
-                    <section class="other">
+                    <section class="content-list">
                         <h2 class="title"> Последние новости </h2>
-                        <div class="other-items">
-                            <ul class="other-list">
-                                <li class="other-item">
+                        <div class="content-list-items">
+                            <ul class="content-list-list">
+                                <li class="content-list-item">
                                     <div class="avatar">
                                         <img src="img2/planeflying.png" alt=""></div>
                                     <div class="desc">
@@ -132,7 +138,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="other-item">
+                                <li class="content-list-item">
                                     <div class="avatar">
                                         <img src="img2/Photo.png" alt=""></div>
                                     <div class="desc">
@@ -146,7 +152,7 @@
                                         </p>
                                     </div>
                                 </li>
-                                <li class="other-item">
+                                <li class="content-list-item">
                                     <div class="avatar">
                                         <img src="img2/Layer_5.png" alt=""></div>
                                     <div class="desc">
